cors, file verification

--- a/src/public/index.html
+++ b/src/public/index.html
@@ -3,11 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>DS-s3-API</title>
 </head>
 <body>
-    <img src="https://sd-project-bucket.s3.us-east-2.amazonaws.com/knyMovie.jpg?X-Amz-Algorithm=AWS4-HMAC-SHA256&X-Amz-Content-Sha256=UNSIGNED-PAYLOAD&X-Amz-Credential=AKIAQZ2DP6YR7T7XWI4U%2F20240425%2Fus-east-2%2Fs3%2Faws4_request&X-Amz-Date=20240425T172734Z&X-Amz-Expires=3600&X-Amz-Signature=53e98d72ef059f93c9ab708f02819331fa8d1705d5348c59b535d0e519cc46e5&X-Amz-SignedHeaders=host&response-content-type=image%2Fjpg&x-id=GetObject" alt="">
-    
-    <a href="https://sd-project-bucket.s3.us-east-2.amazonaws.com/ACT07_PE_LucasAlexander.pdf?X-Amz-Algorithm=AWS4-HMAC-SHA256&X-Amz-Content-Sha256=UNSIGNED-PAYLOAD&X-Amz-Credential=AKIAQZ2DP6YR7T7XWI4U%2F20240425%2Fus-east-2%2Fs3%2Faws4_request&X-Amz-Date=20240425T172244Z&X-Amz-Expires=3600&X-Amz-Signature=8a323460fba9290be210f1d9fca57fc514527420ae63bd0edecdd5b09edd81a7&X-Amz-SignedHeaders=host&response-content-type=application%2Fpdf&x-id=GetObject" target="_blank">aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa</a>
+    <h3>GET</h3>
+    <ol>
+        <li><a href="https://ds-backend.up.railway.app/files/:filename">ds-backend.up.railway.app/files/:filename</a></li>
+        <li><a href="https://ds-backend.up.railway.app/files">ds-backend.up.railway.app/files</a></li>
+    </ol>
+    <h3>POST</h3>
+    <ol>
+        <li><a href="https://ds-backend.up.railway.app/files">https://ds-backend.up.railway.app/files</a></li>
+    </ol>
 </body>
 </html>
